@@ -1,5 +1,7 @@
 - make sure error messages are displayed (was broken as part of fix #50776)
 - don't attempt to expand empty URLs, fixes bug #52860
+- append a reason to api.mandriva.com queries when we are doing it because
+  the cache is outdated
 
 Version 6.27 - 13 August 2009
 
